[package]
name = "scheme-rs"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Matthew Plant <maplant@protonmail.com>"]
description = "Embedded scheme for the async-rust ecosystem"
license = "MPL-2.0"

documentation = "https://docs.rs/crate/scheme-rs"
homepage = "https://github.com/maplant/scheme-rs"
repository = "https://github.com/maplant/scheme-rs"

[dependencies]
async-trait = "0.1"
derive_more = { version = "1.0", features = ["debug", "from"]}
dyn-clone = "1.0.13"
either = "1"
futures = "0.3"
indexmap = "2"
inventory = "0.3"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
nom = "7"
nom_locate = "4"
num = "0.4"
scheme-rs-macros = { version = "0.1.0-alpha.1", path = "proc-macros" }
rug = { version = "1", features = ["num-traits"] }
rand = "0.8"
thiserror = "1"
tokio = { version = "1.41", features = ["full"] }
unicode_categories = "0.1"
reedline = "0.36"
# TODO: Get rid of this dependency
derivative = "2"

[profile.release]
lto = true

[build-dependencies]
nom = "7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "fib"
harness = false
